k8s/apps/board-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: ex8-app
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  type: ClusterIP
  selector:
    app: board-backend
  ports:
    - name: http
      port: 8000
      targetPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-backend
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: board-backend
  template:
    metadata:
      labels:
        app: board-backend
    spec:
      containers:
        - name: fastapi
          image: 925047940866.dkr.ecr.ca-central-1.amazonaws.com/std09-ex8-fastapi:e9d9d3f9a383173c799bf3f7962687ae643360cb
          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
