k8s/apps/board-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: board-frontend
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  type: ClusterIP
  selector:
    app: board-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: board-frontend
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: board-frontend
  template:
    metadata:
      labels:
        app: board-frontend
    spec:
      containers:
        - name: nginx
          image: nginx:bootstrap
          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
